; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mfd/extr_mcp-core.c_mcp_set_telecom_divisor.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mfd/extr_mcp-core.c_mcp_set_telecom_divisor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mcp = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.mcp*, i32)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mcp_set_telecom_divisor(%struct.mcp* %0, i32 %1) #0 {
  %3 = alloca %struct.mcp*, align 8
  %4 = alloca i32, align 4
  store %struct.mcp* %0, %struct.mcp** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.mcp*, %struct.mcp** %3, align 8
  %6 = getelementptr inbounds %struct.mcp, %struct.mcp* %5, i32 0, i32 0
  %7 = call i32 @spin_lock_irq(i32* %6)
  %8 = load %struct.mcp*, %struct.mcp** %3, align 8
  %9 = getelementptr inbounds %struct.mcp, %struct.mcp* %8, i32 0, i32 1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32 (%struct.mcp*, i32)*, i32 (%struct.mcp*, i32)** %11, align 8
  %13 = load %struct.mcp*, %struct.mcp** %3, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 %12(%struct.mcp* %13, i32 %14)
  %16 = load %struct.mcp*, %struct.mcp** %3, align 8
  %17 = getelementptr inbounds %struct.mcp, %struct.mcp* %16, i32 0, i32 0
  %18 = call i32 @spin_unlock_irq(i32* %17)
  ret void
}

declare dso_local i32 @spin_lock_irq(i32*) #1

declare dso_local i32 @spin_unlock_irq(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
